--- a/src/components/Tabs/styles.module.scss
+++ b/src/components/Tabs/styles.module.scss
@@ -1,4 +1,21 @@
 .tabs {
-  position: fixed;
-  top: 56px;
+  background: white;
+  display: flex;
+  height: 32px;
+  padding: 8px;
+  align-items: center;
+
+  li {
+    height: 16px;
+    color: gray;
+    background: #ddd;
+    list-style-type: none;
+
+    padding: 8px 16px;
+    margin-right: 16px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 16px;
+  }
 }
