--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -32,11 +32,15 @@
 
   h2 {
     margin-top: 200px;
-    margin-left: 16px;
+  }
+
+  .content {
+    padding: 16px;
   }
 
   .banner {
     width: 100%;
+    // transform: translateY(104px);
   }
 
   .footer {
